--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-calendar",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "A customizable events calendar widget library",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
@@ -53,7 +53,7 @@
     "sass": "^1.35.2",
     "sass-loader": "^9.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "^3.9.7"
+    "typescript": "4"
   },
   "repository": {
     "type": "git",
